SUBDIRS = Movie \
	actionscript \
	Filter \
	Morph \
	Video \
	Shape \
	LineStyle \
	Media \
	MovieClip \
	Gradient \
	FillStyle \
	Font	\
	Text	\
	Bitmap	\
	BrowserFont \
	TextField \
	PrebuiltClip \
	Button	\
	Action	\
	Sound	\
	SoundStream

EXTRA_DIST = \
	dotests.pl \
	Makefile.inc \
	run_test.c \
	run_test.h

