dist_man1_MANS = \
	makeswf.1

dist_man3_MANS =			\
	destroySWFMovie.3		\
	Ming_getScale.3			\
	Ming_init.3			\
	Ming_setCubicThreshold.3	\
	Ming_setErrorFunction.3		\
	Ming_setScale.3			\
	Ming_setSWFCompression.3	\
	Ming_setWarnFunction.3		\
	Ming_useSWFVersion.3		\
	newSWFMovie.3			\
	newSWFMovieWithVersion.3	\
	SWFMovie_add.3			\
	SWFMovie_labelFrame.3		\
	SWFMovie_namedAnchor.3		\
	SWFMovie_protect.3		\
	SWFMovie_setDimension.3		\
	SWFMovie_setNumberOfFrames.3	\
	SWFMovie_setBackground.3	\
	SWFMovie_setRate.3		
