dist_man1_MANS = \
	dbl2png.1 \
	gif2dbl.1 \
	gif2mask.1 \
	listfdb.1 \
	listjpeg.1 \
	listmp3.1 \
	makefdb.1 \
	makeswf.1 \
	png2dbl.1 \
	raw2adpcm.1 \
	swftocxx.1 \
	swftoperl.1 \
	swftophp.1 \
	swftopython.1 \
	swftotcl.1

dist_man3_MANS =			\
	destroySWFMovie.3		\
	Ming_getScale.3			\
	Ming_init.3			\
	Ming_setCubicThreshold.3	\
	Ming_setErrorFunction.3		\
	Ming_setScale.3			\
	Ming_setSWFCompression.3	\
	Ming_setWarnFunction.3		\
	Ming_useSWFVersion.3		\
	newSWFMovie.3			\
	newSWFMovieWithVersion.3	\
	newSWFShapeFromBitmap.3		\
	newSWFVideoStream.3		\
	newSWFVideoStream_fromFile.3	\
	newSWFVideoStream_fromInput.3	\
	SWFMovie_add.3			\
	SWFMovie_labelFrame.3		\
	SWFMovie_namedAnchor.3		\
	SWFMovie_protect.3		\
	SWFMovie_setDimension.3		\
	SWFMovie_setNumberOfFrames.3	\
	SWFMovie_setBackground.3	\
	SWFMovie_setRate.3		\
	SWFDisplayItem_addFilter.3	\
	SWFDisplayItem_cacheAsBitmap.3	\
	SWFDisplayItem_get_x.3		\
	SWFDisplayItem_setBlendMode.3	\
	SWFShape_drawArc.3		\
	SWFShape_drawCubic.3		\
	SWFShape_drawScaledLineTo.3	\
	SWFShape_movePenTo.3		\
	SWFShape_moveScaledPenTo.3	\
	SWFVideoStream_getNumFrames.3	\
	SWFVideoStream_getVideoFrame.3	\
	SWFVideoStream_hasAudio.3	\
	SWFVideoStream_setDimension.3	
