AUTOMAKE_OPTIONS = foreign dist-bzip2 dist-zip 1.4d

noinst_LTLIBRARIES = libswf.la

libswf_la_SOURCES = \
	action.c \
	bitmap.c \
	block.c \
	browserfont.c \
	button.c \
	character.c \
	cxform.c \
	dbl.c \
	error.c \
	fillstyle.c \
	font.c \
	fontinfo.c \
	fromswf.c \
	gifdbl.c \
	gradient.c \
	imports.c \
	input.c \
	jpeg.c \
	linestyle.c \
	matrix.c \
	method.c \
	morph.c \
	mp3.c \
	output.c \
	outputblock.c \
	placeobject.c \
	pngdbl.c \
	read.c \
	rect.c \
	shape.c \
	sound.c \
	soundinstance.c \
	soundstream.c \
	sprite.c \
	text.c \
	textfield.c \
	ttffont.c \
	utf8.c \
	videostream.c

libswf_la_LDFLAGS = $(MATHLIB)
libswf_la_CFLAGS = -I$(top_srcdir)/src

#EXTRA_PROGRAMS = test

#test_SOURCES = test.c

#test_LDADD = libswf.la

noinst_HEADERS = \
	action.h \
	bitmap.h \
	block.h \
	blocktypes.h \
	browserfont.h \
	button.h \
	character.h \
	cxform.h \
	dbl.h \
	error.h \
	exports.h \
	fillstyle.h \
	font.h \
	fontinfo.h \
	fromswf.h \
	gradient.h \
	imports.h \
	input.h \
	jpeg.h \
	libswf.h \
	linestyle.h \
	matrix.h \
	method.h \
	morph.h \
	output.h \
	outputblock.h \
	placeobject.h \
	rect.h \
	shape.h \
	sound.h \
	soundinstance.h \
	soundstream.h \
	sprite.h \
	swf.h \
	text.h \
	textfield.h \
	ttffont.h \
	utf8.h \
	videostream.h


